# Game-Dev-SDL2

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/01_setting_up/: main.cpp
source/02_bare_bones/: main.cpp
source/03_modularization/: CMakeLists.txt  gama.cpp  game.h  game.hpp  main.cpp
source/bare_bones/: CMakeLists.txt
source/setting_up/: CMakeLists.txt
